@@ -3,44 +3,9 @@
 <jboss>
      <secure>true</secure>
      <container-configurations>
-       <container-configuration configuration-class="org.jboss.ejb.deployment.StatefulSessionContainerConfiguration">
-	 <container-name>Vlib Stateful Config</container-name>
-	 <call-logging>true</call-logging>
-	 <container-invoker>org.jboss.ejb.plugins.jrmp13.server.JRMPContainerInvoker</container-invoker>
-	 <instance-pool>org.jboss.ejb.plugins.StatefulSessionInstancePool</instance-pool>
-	 <instance-cache>org.jboss.ejb.plugins.StatefulSessionInstanceCache</instance-cache>
-	 <persistence-manager>org.jboss.ejb.plugins.StatefulSessionFilePersistenceManager</persistence-manager>
-	 <transaction-manager></transaction-manager>
-	 <authentication-module></authentication-module>
-	 <role-mapping-manager></role-mapping-manager>
-	 <container-invoker-conf>
-	   <Optimized>false</Optimized>
-	 </container-invoker-conf>
-	 <container-cache-conf>
-	   <cache-policy>org.jboss.ejb.plugins.NoPassivationCachePolicy</cache-policy>
-	 </container-cache-conf>
-       </container-configuration>
-       <container-configuration configuration-class="org.jboss.ejb.deployment.StatelessSessionContainerConfiguration">
-	 <container-name>Vlib Stateless Config</container-name>
-	 <call-logging>true</call-logging>
-	 <container-invoker>org.jboss.ejb.plugins.jrmp13.server.JRMPContainerInvoker</container-invoker>
-	 <instance-pool>org.jboss.ejb.plugins.StatelessSessionInstancePool</instance-pool>
-	 <instance-cache></instance-cache>
-	 <persistence-manager></persistence-manager>
-	 <transaction-manager></transaction-manager>
-	 <authentication-module></authentication-module>
-	 <role-mapping-manager></role-mapping-manager>
-	 <container-invoker-conf>
-	   <Optimized>false</Optimized>
-	 </container-invoker-conf>
-	 <container-pool-conf>
-	   <MaximumSize>100</MaximumSize>
-	   <MinimumSize>10</MinimumSize>
-	 </container-pool-conf>
-       </container-configuration>
        <container-configuration configuration-class="org.jboss.ejb.deployment.EntityContainerConfiguration">
 	 <container-name>Vlib Entity Bean</container-name>
-	 <call-logging>true</call-logging>
+	 <call-logging>false</call-logging>
 	 <container-invoker>org.jboss.ejb.plugins.jrmp13.server.JRMPContainerInvoker</container-invoker>
 	 <instance-pool>org.jboss.ejb.plugins.EntityInstancePool</instance-pool>
 	 <instance-cache>org.jboss.ejb.plugins.EntityInstanceCache</instance-cache>
@@ -49,7 +14,7 @@
 	 <authentication-module></authentication-module>
 	 <role-mapping-manager></role-mapping-manager>
 	 <container-invoker-conf>
-	   <Optimized>false</Optimized>
+	   <Optimized>true</Optimized>
 	 </container-invoker-conf>
 	 <container-cache-conf>
 	   <cache-policy>org.jboss.ejb.plugins.NoPassivationCachePolicy</cache-policy>
@@ -60,6 +25,41 @@
 	 </container-pool-conf>
 	 <commit-option>A</commit-option>
        </container-configuration>
+       <container-configuration configuration-class="org.jboss.ejb.deployment.StatelessSessionContainerConfiguration">
+	 <container-name>Vlib Stateless Config</container-name>
+	 <call-logging>false</call-logging>
+	 <container-invoker>org.jboss.ejb.plugins.jrmp13.server.JRMPContainerInvoker</container-invoker>
+	 <instance-pool>org.jboss.ejb.plugins.StatelessSessionInstancePool</instance-pool>
+	 <instance-cache></instance-cache>
+	 <persistence-manager></persistence-manager>
+	 <transaction-manager></transaction-manager>
+	 <authentication-module></authentication-module>
+	 <role-mapping-manager></role-mapping-manager>
+	 <container-invoker-conf>
+	   <Optimized>true</Optimized>
+	 </container-invoker-conf>
+	 <container-pool-conf>
+	   <MaximumSize>100</MaximumSize>
+	   <MinimumSize>10</MinimumSize>
+	 </container-pool-conf>
+       </container-configuration>
+       <container-configuration configuration-class="org.jboss.ejb.deployment.StatefulSessionContainerConfiguration">
+	 <container-name>Vlib Stateful Config</container-name>
+	 <call-logging>false</call-logging>
+	 <container-invoker>org.jboss.ejb.plugins.jrmp13.server.JRMPContainerInvoker</container-invoker>
+	 <instance-pool>org.jboss.ejb.plugins.StatefulSessionInstancePool</instance-pool>
+	 <instance-cache>org.jboss.ejb.plugins.StatefulSessionInstanceCache</instance-cache>
+	 <persistence-manager>org.jboss.ejb.plugins.StatefulSessionFilePersistenceManager</persistence-manager>
+	 <transaction-manager></transaction-manager>
+	 <authentication-module></authentication-module>
+	 <role-mapping-manager></role-mapping-manager>
+	 <container-invoker-conf>
+	   <Optimized>true</Optimized>
+	 </container-invoker-conf>
+	 <container-cache-conf>
+	   <cache-policy>org.jboss.ejb.plugins.NoPassivationCachePolicy</cache-policy>
+	 </container-cache-conf>
+       </container-configuration>
      </container-configurations>
      <resource-managers>
        <resource-manager res-class="org.jboss.ejb.deployment.JDBCResource">
@@ -69,13 +69,18 @@
      </resource-managers>
      <enterprise-beans>
        <session>
+	 <ejb-name>BookQuery</ejb-name>
+	 <jndi-name>vlib/BookQuery</jndi-name>
+	 <configuration-name>Vlib Stateful Config</configuration-name>
+	 <resource-ref>
+	   <res-ref-name>jdbc/dataSource</res-ref-name>
+	   <resource-name>jdbc/dataSource</resource-name>
+	 </resource-ref>
+       </session>
+       <session>
 	 <ejb-name>Operations</ejb-name>
 	 <jndi-name>vlib/Operations</jndi-name>
 	 <configuration-name>Vlib Stateless Config</configuration-name>
-	 <ejb-ref>
-	   <ejb-ref-name>ejb/Publisher</ejb-ref-name>
-	   <jndi-name>vlib/Publisher</jndi-name>
-	 </ejb-ref>
 	 <ejb-ref>
 	   <ejb-ref-name>ejb/Book</ejb-ref-name>
 	   <jndi-name>vlib/Book</jndi-name>
@@ -84,15 +89,10 @@
 	   <ejb-ref-name>ejb/Person</ejb-ref-name>
 	   <jndi-name>vlib/Person</jndi-name>
 	 </ejb-ref>
-	 <resource-ref>
-	   <res-ref-name>jdbc/dataSource</res-ref-name>
-	   <resource-name>jdbc/dataSource</resource-name>
-	 </resource-ref>
-       </session>
-       <session>
-	 <ejb-name>BookQuery</ejb-name>
-	 <jndi-name>vlib/BookQuery</jndi-name>
-	 <configuration-name>Vlib Stateful Config</configuration-name>
+	 <ejb-ref>
+	   <ejb-ref-name>ejb/Publisher</ejb-ref-name>
+	   <jndi-name>vlib/Publisher</jndi-name>
+	 </ejb-ref>
 	 <resource-ref>
 	   <res-ref-name>jdbc/dataSource</res-ref-name>
 	   <resource-name>jdbc/dataSource</resource-name>
@@ -117,8 +117,8 @@
 	 </ejb-ref>
        </entity>
        <entity>
-	 <ejb-name>Person</ejb-name>
-	 <jndi-name>vlib/Person</jndi-name>
+	 <ejb-name>Publisher</ejb-name>
+	 <jndi-name>vlib/Publisher</jndi-name>
 	 <configuration-name>Vlib Entity Bean</configuration-name>
 	 <ejb-ref>
 	   <ejb-ref-name>ejb/KeyAllocator</ejb-ref-name>
@@ -126,8 +126,8 @@
 	 </ejb-ref>
        </entity>
        <entity>
-	 <ejb-name>Publisher</ejb-name>
-	 <jndi-name>vlib/Publisher</jndi-name>
+	 <ejb-name>Person</ejb-name>
+	 <jndi-name>vlib/Person</jndi-name>
 	 <configuration-name>Vlib Entity Bean</configuration-name>
 	 <ejb-ref>
 	   <ejb-ref-name>ejb/KeyAllocator</ejb-ref-name>
